@@ -1,7 +1,8 @@
 2006-03-03  Vlad Seryakov  <seryakov@users.sf.net>
 
 	* nsd/driver.c: Use driver proc in WriterThread to ensure 
-	proper driver's protocol processing
+	proper driver's protocol processing, minor cleanups and changes to 
+	support UDP socket driver
 
 2006-03-02  Vlad Seryakov  <seryakov@users.sf.net>
 
